                     Visual Servoing Platform
                     Resume of the change log

     Copyright Projet Lagadic / IRISA-INRIA Rennes, 2005-2012
                    http://www.irisa.fr/lagadic


ViSP 2.6.3 (under development)
  - New features
  - Improvements
    - MinGW supported.
  - Examples
  - Bug fixed
    - [14646] ViSP doesn't built on Windows with MinGW

----------------------------------------------
ViSP 2.6.2 (released July 15, 2012)
  - New features
     - New vp1394CMUGrabber class that allows firewire frame acquisition
       under Windows using CMU 1394 Digital Camera 3rd party library.
       Thanks to Lucas Lopes Lemos and Guillaume Laurent from FEMTO-ST,
       AS2M departement, Besancon, France for this contribution.
     - New vpPioneer, vpPioneerPan, vpRobotPioneer classes to control Pioneer
       mobile robots using Aria 3rd party library.
     - New vpFeatureSegment class to consider a segment as a visual
       servoing feature. Normalized and non normalized features are considered.
     - New vpFeatureMomentArea class to consider moment area as a visual
       feature.
     - Introduction of new functionalities in vpIoTools to parse text
       config files
     - Introduction of YARP to ViSP image converters in vpImageConvert
     - New vpClient and vpServer classes for a multiclients TCP network.
     - New vpPoseFeatures class for pose computation from any visual features.
       To be able to consider other user defined features the compiler should
       be compatible with C++ 11 standart.
  - Improvements
     - Introduce a new Denavit Hartenberg representation of the Biclops head
       in vpBiclops.
     - Compatibility with g++ 4.7 and OpenCV 2.3.1, 2.4.0, 2.4.1
     - Remove warning detected with Visual C++ /Wall flag
     - Use CMake native package finder for zlib, png, jpeg, coin3d, gtk2 and
       doxygen 3rd party libraries detection. If detection fails, we use our
       own package finder.