@@ -13,6 +13,7 @@ ViSP 2.6.3 (under development)
   - Examples
   - Bug fixed
     - [14646] ViSP doesn't built on Windows with MinGW
+    - [14651] Build error arround vpMatrix::pseudoInverse() with OpenCV 2.1.0
 
 ----------------------------------------------
 ViSP 2.6.2 (released July 15, 2012)
